# gen3-mcp-client

./: README.md  client.py  pyproject.toml
mcp_servers/: mds_mcp.json
