[project]
name = "gen3-mcp-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.51.0",
    "langchain-anthropic>=0.3.13",
    "langchain-ollama>=0.3.3",
    "mcp>=1.8.0",
    "mcp-use>=1.2.13",
    "python-dotenv>=1.1.0",
]
